fix: adjusted z-index to ensure mobile menu appears aboce the image

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -19,6 +19,7 @@
 
 .menuMobile {
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 15.625rem;
